--- a/src/TransactionProcessingService.API/TransactionProcessingService.API.csproj
+++ b/src/TransactionProcessingService.API/TransactionProcessingService.API.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
 	<Target Name="OpenAPI" AfterTargets="Build" Condition="$(Configuration)=='Debug'">
-		<Exec Command="dotnet swagger tofile --output ./ApiContract/v1/swagger.yaml --yaml $(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
+		<Exec Command="dotnet swagger tofile --output ./ApiContract/v1/OpenApiSpecification.yaml --yaml $(OutputPath)$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
 	</Target>
 
 </Project>
